# oven

./: .gitignore  CMakeLists.txt  CMakeLists_scanner.txt'  README.md  scan_registers.cpp
qml/: Main.qml
scripts/: generate_graphs.py  setup_logging.sh
src/: main.cpp
src/core/: Events.h  StateMachine.cpp  StateMachine.h
src/data/: DataLogger.h
src/hw/: IDoor.h  IFan.h  IHeater.h  IRelay.h  ITempSensor.h
src/hw/impl/: GpioFan.h  GpioHeater.h  GpioRelay.h  MockFan.h  MockHeater.h  MockTemp.h  ThkaRs485Temp.cpp  ThkaRs485Temp.h  ThkaTempAdapter.h
src/ui/: OvenBackend.cpp  OvenBackend.h  ThkaPoller.cpp  ThkaPoller.h
